# arbor-treetable

./: .gitignore  DELIVERY.md  LICENSE  Makefile  PRODUCT-ASSESSMENT.md  README.md  RUNNING.md  package.json  pyproject.toml
arbor/: api.py  hooks.py
arbor/adapter/: __init__.py  canonical_spec.py  seed.py
arbor/agent/: __init__.py  chat.py
arbor/arbor/: __init__.py  api.py  testing.py
arbor/auth/: __init__.py  api.py  base.py  local.py  oidc.py  provider.py  resolver.py
arbor/core/: __init__.py  acl.py  agentloop.py  backoff.py  change_request.py  executor.py  explore.py  handlers.py  ports.py  process.py  registry.py  role_app.py  schema.py  security.py  snapshot.py  testing.py  types.py
demo/showcase/: seed.py
demo/wide/: seed.py
docs/: ARCHITECTURE.md  CAPABILITIES.md  DATA-MODEL.md  DECISIONS.md  DEMO-JOURNEYS.md  PERMISSIONS.md
docs/design/: area-details.md  impersonation-comments-process.md
docs/journey/: README.md
frontend/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts  vite.e2e.config.ts
frontend/src/: App.integration.test.tsx  App.test.tsx  App.tsx  App.view.test.tsx  api.test.ts  api.ts  index.routing.test.ts  index.tsx  jsx.d.ts  styles.css
tests/: TEST-PLAN.md  admin.md  agent.md  api.md  change-request-lifecycle.md  conftest.py  notifications-and-ack.md  permissions-and-delegation.md  web-ui.md  webhooks.md
tests/adapter/: README.md  conftest.py  test_api_integration.py  test_seed_parity.py
tests/agent/: conftest.py  test_chat_endpoint_bench.py  test_orchestration_and_governance.py  test_react_session.py  test_read_acl_inheritance.py  test_tools_and_provider.py
tests/api/: conftest.py  test_parity_harness.py  test_rest_parity_bench.py
tests/auth/: conftest.py  test_auth_seam.py
tests/backend/: README.md  _helpers.py  conftest.py  run_backend_tests.sh  test_activity.py  test_batch_cr_bench.py  test_cell_comments.py  test_cell_drafts.py  test_change_request_lifecycle.py  test_create_sheet.py  test_explore_bench.py  test_impersonation_bench.py  test_notifications_ack.py  test_permissions_acl.py  test_process_bench.py
tests/core/: test_acl_read.py  test_acl_resolver.py  test_agentloop.py  test_cell_comments_acl.py  test_change_request.py  test_change_request_batch.py  test_concurrency.py  test_executor.py  test_explore.py  test_explore_read_acl.py  test_process.py  test_registry.py  test_role_app.py  test_security_backoff.py  test_snapshot.py  test_snapshot_read_acl.py
tests/dispatch/: conftest.py  test_notification_dispatcher.py  test_process_dispatcher.py  test_shared_matcher.py  test_webhook_dispatcher.py
tests/doctype/: test_doctype_schemas.py
tests/e2e/: README.md  acme-capture.e2e.spec.ts  agent-sidebar.e2e.spec.ts  authz-views-journey.e2e.spec.ts  change-request-review.e2e.spec.ts  column-settings.e2e.spec.ts  cr-bulk-approve.e2e.spec.ts  cr-bulk-reject.e2e.spec.ts  delegation.e2e.spec.ts  delete-node.e2e.spec.ts  dnd-move.e2e.spec.ts  fixtures.ts  import-export.e2e.spec.ts  inline-edit.e2e.spec.ts  journey-capture.e2e.spec.ts  notification-inbox.e2e.spec.ts  pending-cross-user.e2e.spec.ts  playwright.config.ts  renovation-capture.e2e.spec.ts  tree-expand-collapse.e2e.spec.ts  tsconfig.json  unsubscribe.e2e.spec.ts  wide-capture.e2e.spec.ts  zz-ux-capture.e2e.spec.ts
tests/fixtures/: canonical.py
(+157 files in other folders)
